# contributing-hour

./: LICENSE  README.md  RELEASE.md  conftest.py  pyproject.toml  setup.cfg
.github/workflows/: build.yml  check-release.yml
contrib_hour/: __init__.py  handlers.py
jupyter-config/jupyter_server_config.d/: server_database_extension.json
jupyter_server_config.d/: contrib_hour.json
server_database_extension/: __init__.py  extension.py  handlers.py
server_database_extension/tests/: __init__.py  test_handlers.py
tests/: test_handlers.py
